--- a/EstilosPersonalizados.CSS
+++ b/EstilosPersonalizados.CSS
@@ -3,6 +3,15 @@ body    {
     font-family: 'Courier New', Courier, monospace;
 }
 
-#ejemplo {
-    
+.banner {
+    opacity: 0.9;
+    filter: blur(1.5px);
+}
+
+.fotoPerfil {
+    width: 17%;
+    border-radius: 50%;
+    margin: -110px 100px;
+    border: 5px #0b0033 solid;
+    filter: contrast(100%) brightness(110%);
 }
