--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -2,9 +2,7 @@
     <!--Titulo de la seccion-->
     <h2>Acerca de</h2>
     <!--Texto básico e introductorio acerca de quien soy y que hago-->
-    <div>
+    <div class="contenedor-secciones">
         <p class="texto-secciones">{{miPorfolio['texto1']}}</p>
-        <p class="texto-secciones">{{miPorfolio['texto2']}}</p>
-        <p class="texto-secciones">{{miPorfolio['texto3']}}</p>
     </div>
 </div>
